configured font mixins

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,3 +1,13 @@
 .header
   display: flex
   justify-content: space-between
+  margin-top: 26px
+  margin-bottom: 26px
+
+  +thin
+  .button
+    border-radius: 22px
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
+    color: white
+    padding: 9px 20px 10px 19px
+    margin-top: 3px
