--- a/components/Header.pug
+++ b/components/Header.pug
@@ -6,5 +6,5 @@ header
     div Вакансии
     div Новости
     div Соглашения
-    button Войти
-    button Зарегестрироваться
+    button.button Войти
+    button.button Зарегестрироваться
