configured style for button

--- a/components/Header.pug
+++ b/components/Header.pug
@@ -6,5 +6,8 @@ header
     div Вакансии
     div Новости
     div Соглашения
-    button.button Войти
-    button.button Зарегестрироваться
+    button.button 
+      div Войти
+    button.button 
+      div Зарегестрироваться
+      
