--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,12 +1,21 @@
 .header
   display: flex
   justify-content: space-between
+  align-items: center
   margin-top: 26px
   margin-bottom: 26px
 
   +thin
-  .button
-    border-radius: 22px
-    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
-    color: white
+.button
+  border-radius: 22px
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
+  border: 2px solid
+  color: white
+
+  div
+    background-color: #fff
+    color: rgba(188, 156, 255, 1)
+    margin-top: 2px
+    margin-bottom: 2px
     padding: 9px 20px 10px 19px
+    border-radius: 22px
