started a card for selection of room

--- a/index.pug
+++ b/index.pug
@@ -6,5 +6,6 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="sass/style.sass")
     title Toxin
-  body 
-    include ./components/Header.pug
+  body.background
+      include ./components/Header.pug
+      include ./components/Rectangle.pug
