--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -87,3 +87,7 @@
 @mixin extraLight {
   font-family: 'Montserrat Extra Light', sans-serif;
 }
+
+@mixin semiBold {
+  font-family: 'Montserrat Semibold';
+}
