--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -2,8 +2,9 @@
   display: flex
   justify-content: space-between
   align-items: center
-  margin-top: 26px
-  margin-bottom: 26px
+  padding-top: 26px
+  background-color: #fff
+  padding-bottom: 26px
 
   +thin
 .button
