--- a/sass/_rectangle.sass
+++ b/sass/_rectangle.sass
@@ -1,19 +1,54 @@
 .rectangle
   position: absolute
-  background-color: white
-  height: 374px
   width: 380px
+  height: 374px
   left: 140px
   top: 140px
+  background: #FFFFFF
+  border: 1px solid rgba(0, 0, 0, 0.12)
+  box-sizing: border-box
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2)
   border-radius: 4px
   +semiBold
-  .name
-    padding: 40px 30px
-  .input
-    text-transform: uppercase
+
+.name
+  padding-top: 40px
+  padding-left: 30px
+  padding-right: 30px
+
 .dates-wrapper
   display: flex
   justify-content: space-between
+  margin-top: 21px
+  margin-left: 30px
+  margin-right: 97px
+  text-transform: uppercase
+
 .guests
-  display: flex
-  justify-content: space-between
+  margin-left: 30px
+  margin-top: 21px
+  text-transform: uppercase
+
+#rec
+  height: 44px
+  width: 320px
+  border-radius: 22px
+  width: 94%
+  margin-top: 31px
+  text-transform: uppercase
+  font-size: 12px
+
+.setting
+  width: 150px
+  height: 44px
+  margin-right: 20px
+  background: #FFFFFF
+  border: 1px solid rgba(31, 32, 65, 0.25)
+  box-sizing: border-box
+  border-radius: 4px
+  padding: 12px 32px 9px 15px
+  color: rgba(31, 32, 65, 0.75)
+  font-size: 14px
+  +thin
+#width
+  width: 92%
