--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,8 +5,11 @@
   padding-top: 26px
   background-color: #fff
   padding-bottom: 26px
-
   +thin
+
+.logo
+  margin-left: 140px
+
 .button
   border-radius: 22px
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
@@ -16,7 +19,8 @@
   div
     background-color: #fff
     color: rgba(188, 156, 255, 1)
-    margin-top: 2px
-    margin-bottom: 2px
-    padding: 9px 20px 10px 19px
+    margin: 3px
+    padding: 10px 20px 10px 19px
     border-radius: 22px
+    text-transform: uppercase
+    +semiBold
