--- a/components/Header.pug
+++ b/components/Header.pug
@@ -1,6 +1,7 @@
 header 
   div.header
-    div Toxin
+    div.logo 
+      img(src="./image/Group 1.svg")
     div О нас 
     div Услуги
     div Вакансии
