--- a/index.pug
+++ b/index.pug
@@ -9,3 +9,5 @@ html(lang="en")
   body.background
       include ./components/Header.pug
       include ./components/Rectangle.pug
+      include ./components/Footer.pug
+
