--- a/components/Footer.pug
+++ b/components/Footer.pug
@@ -1,29 +1,34 @@
 footer 
   div.footer
-    div 
-      img(src="./image/Group 1.svg")
-      div Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-    div 
-      div Навигация 
-      div О нас 
-      div Новости 
-      div Служба поддержки 
-      div Услуги
-    div 
-      div О нас
-      div О сервесе
-      div Наша команда
-      div Вакансии
-      div Инвесторы
-    div 
-      div Служба поддержки
-      div Соглашения
-      div Сообщества
-      div Связь с нами 
-    div 
-      div Подписка
-      div Получайте специальные уведомления
-      input(placeholder="Email")
+    div.margin
+      img(src="./image/Group 1.svg").style 
+      div.style#break Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+    div.margin
+      div.style#bold Навигация 
+      div.style  О нас 
+      div.style  Новости 
+      div.style  Служба поддержки 
+      div.style  Услуги
+    div.margin
+      div.style#bold  О нас
+      div.style  О сервесе
+      div.style  Наша команда
+      div.style Вакансии
+      div.style  Инвесторы
+    div.margin 
+      div.style#bold  Служба поддержки
+      div.style  Соглашения
+      div.style  Сообщества
+      div.style  Связь с нами 
+    div.margin 
+      div.style#bold  Подписка
+      div.style  Получайте специальные уведомления
+      input(placeholder="Email")#border
+  div.copy 
+    div Copyright © 2018 Toxin отель. Все права защищены.
+    div
+      img(src="./image/twitter.svg")
+      img(src="./image/facebook.svg")
+      img(src="./image/instagram.svg")
 
-      
       
