--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,7 +1,7 @@
 .footer
   display: flex
   // flex-direction: column
-  align-items: center
+  // align-items: center
   justify-content: space-around
   position: absolute
   width: 1440px
@@ -10,3 +10,44 @@
   top: 900px
   background: #FFFFFF
   box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1)
+.style
+  +thin
+  font-size: 14px
+  margin-bottom: 21px
+
+#break
+  height: 72px
+  width: 260px
+  left: 140px
+  top: 1060px
+  border-radius: nullpx
+#bold
+  +semiBold
+.copy
+  +thin
+  position: absolute
+  width: 1440px
+  height: 70px
+  left: -1px
+  top: 1273px
+  margin-top: 26px
+  margin-bottom: 26px
+  color: rgba(31, 32, 65, 0.75)
+  margin-left: 140px
+  background: #FFFFFF
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
+  display: flex
+  justify-content: space-between
+
+.margin
+  margin-top: 104px
+
+  #border
+    width: 260px
+    height: 44px
+    left: 1040px
+    top: 1108px
+    background: #FFFFFF
+    border: 1px solid rgba(31, 32, 65, 0.25)
+    box-sizing: border-box
+    border-radius: 4px
