--- a/components/Header.pug
+++ b/components/Header.pug
@@ -3,7 +3,9 @@ header
     div.logo 
       img(src="./image/Group 1.svg")
     div О нас 
-    div Услуги
+    div.rotate
+      div Услуги
+      div.i
     div Вакансии
     div Новости
     div Соглашения
