--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -26,7 +26,7 @@
 .copy
   +thin
   position: absolute
-  width: 1440px
+  max-width: 1440px
   height: 70px
   left: -1px
   top: 1273px
@@ -37,7 +37,7 @@
   background: #FFFFFF
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
   display: flex
-  justify-content: space-between
+  justify-content: space-around
 
 .margin
   margin-top: 104px
