--- a/components/Header.pug
+++ b/components/Header.pug
@@ -8,7 +8,9 @@ header
       div.i
     div Вакансии
     div Новости
-    div Соглашения
+    div.rotate
+      div Соглашения
+      div.i
     button.button 
       div Войти
     button.button 
