--- a/sass/_arrow.sass
+++ b/sass/_arrow.sass
@@ -1,6 +1,8 @@
 .i
-  width: 24px
-  height: 24px
-  border-top: 1px solid #6E18C0
-  border-right: 1px solid #6E18C0
+  width: 12px
+  height: 12px
+  border-top: 2px solid rgba(31, 32, 65, 0.5)
+  border-right: 2px solid rgba(31, 32, 65, 0.5)
   transform: rotate(135deg)
+  margin-left: 12px
+  margin-top: 1px
