--- a/components/Rectangle.pug
+++ b/components/Rectangle.pug
@@ -1,8 +1,10 @@
+
 div.rectangle
   h2.name Найдем номера под ваши пожелания
   div.dates-wrapper
     div Прибытие
       input(placeholder="ДД.ММ.ГГГГ").setting#datepicker
+      div.i
     div Выезд
       input(placeholder="ДД.ММ.ГГГГ").setting
   div.guests
@@ -11,6 +13,4 @@ div.rectangle
     button.button#rec Подобрать номер
   
   script 
-     = $( function() {
-      $('#datepicker').datepicker()
-    })
+    include ../js/script.js
