--- a/components/Rectangle.pug
+++ b/components/Rectangle.pug
@@ -9,7 +9,7 @@ div.rectangle
       input(placeholder="ДД.ММ.ГГГГ" name="endDate").setting#date_range
   div.guests
     div Гости
-    input(placeholder="Сколько гостей").setting#width
+    input(placeholder="Сколько гостей" name='myname').setting#width
     button.button#rec Подобрать номер
   
   script 
