edit footer and header

--- a/components/Footer.pug
+++ b/components/Footer.pug
@@ -27,8 +27,8 @@ footer
   div.copy 
     div Copyright © 2018 Toxin отель. Все права защищены.
     div
-      img(src="./image/twitter.svg")
-      img(src="./image/facebook.svg")
-      img(src="./image/instagram.svg")
+      img(src="./image/twitter.svg").icon
+      img(src="./image/facebook.svg").icon
+      img(src="./image/instagram.svg").icon#inst
 
       
