--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -26,8 +26,8 @@
 .copy
   +thin
   position: absolute
-  max-width: 1440px
-  height: 70px
+  width: 1300px
+  height: 56px
   left: -1px
   top: 1273px
   margin-top: 26px
@@ -37,7 +37,13 @@
   background: #FFFFFF
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
   display: flex
-  justify-content: space-around
+  justify-content: space-between
+
+.icon
+  margin-left: 20px
+
+#inst
+  margin-right: 140px
 
 .margin
   margin-top: 104px
