--- a/components/Header.pug
+++ b/components/Header.pug
@@ -2,17 +2,18 @@ header
   div.header
     div.logo 
       img(src="./image/Group 1.svg")
-    div О нас 
-    div.rotate
-      div Услуги
-      div.i
-    div Вакансии
-    div Новости
-    div.rotate
-      div Соглашения
-      div.i
-    button.button 
-      div Войти
-    button.button 
-      div Зарегестрироваться
+    div.position
+      div О нас 
+      div.rotate
+        div Услуги
+        div.i
+      div Вакансии
+      div Новости
+      div.rotate
+        div Соглашения
+        div.i
+      button.button 
+        div Войти
+      button.button#registration
+        div Зарегестрироваться
       
