--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -6,6 +6,7 @@
   background-color: #fff
   padding-bottom: 26px
   +thin
+  height: 70px
 
 .logo
   margin-left: 140px
@@ -15,14 +16,24 @@
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
   border: 2px solid
   color: white
+  height: 34px
+  width: 87px
 
   div
     background-color: #fff
     color: rgba(188, 156, 255, 1)
     margin: 3px
-    padding: 10px 20px 10px 19px
+    padding: 9px
     border-radius: 22px
     text-transform: uppercase
     +semiBold
+    font-size: 12px
 .rotate
   display: flex
+
+.position
+  width: 800px
+  display: flex
+  justify-content: space-around
+  align-items: center
+  margin-right: 160px
