--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,7 +5,9 @@
   padding-top: 26px
   background-color: #fff
   padding-bottom: 26px
-  +thin
+  +regular
+  color: rgba(31, 32, 65, 0.5)
+  font-size: 14px
   height: 70px
 
 .logo
@@ -18,16 +20,22 @@
   color: white
   height: 34px
   width: 87px
+  +bold
 
   div
     background-color: #fff
     color: rgba(188, 156, 255, 1)
     margin: 3px
-    padding: 9px
+    padding: 5px 10px
     border-radius: 22px
     text-transform: uppercase
-    +semiBold
+    +bold
     font-size: 12px
+
+#registration
+  width: 196px
+  +bold
+  font-size: 12px
 .rotate
   display: flex
 
