--- a/components/Header.pug
+++ b/components/Header.pug
@@ -14,6 +14,5 @@ header
         div.i
       button.button 
         div Войти
-      button.button#registration
-        div Зарегестрироваться
+      button.button#registration Зарегестрироваться
       
