--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,9 +1,11 @@
 @import 'fonts'
 @import 'background'
+@import 'button'
 @import 'header'
 @import 'rectangle'
 @import 'footer'
 @import 'arrow'
+@import 'daterange'
 
 *
   box-sizing: border-box
