--- a/components/Footer.pug
+++ b/components/Footer.pug
@@ -1,34 +1,33 @@
-footer 
-  div.footer
-    div.margin
-      img(src="./image/Group 1.svg").style 
-      div.style#break Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-    div.margin
-      div.style#bold Навигация 
-      div.style  О нас 
-      div.style  Новости 
-      div.style  Служба поддержки 
-      div.style  Услуги
-    div.margin
-      div.style#bold  О нас
-      div.style  О сервесе
-      div.style  Наша команда
-      div.style Вакансии
-      div.style  Инвесторы
-    div.margin 
-      div.style#bold  Служба поддержки
-      div.style  Соглашения
-      div.style  Сообщества
-      div.style  Связь с нами 
-    div.margin 
-      div.style#bold  Подписка
-      div.style  Получайте специальные уведомления
-      input(placeholder="Email")#border
-  div.copy 
-    div Copyright © 2018 Toxin отель. Все права защищены.
-    div
-      img(src="./image/twitter.svg").icon
-      img(src="./image/facebook.svg").icon
-      img(src="./image/instagram.svg").icon#inst
+footer.footer
+  div
+    img(src="./image/Group 1.svg").footer__elem 
+    div.footer__elem#break Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+  div
+    div.footer__elem#bold Навигация 
+    div.footer__elem О нас 
+    div.footer__elem Новости 
+    div.footer__elem Служба поддержки 
+    div.footer__elem Услуги
+  div
+    div.footer__elem#bold  О нас
+    div.footer__elem  О сервесе
+    div.footer__elem  Наша команда
+    div.footer__elem Вакансии
+    div.footer__elem  Инвесторы
+  div.margin 
+    div.footer__elem#bold  Служба поддержки
+    div.footer__elem  Соглашения
+    div.footer__elem  Сообщества
+    div.footer__elem  Связь с нами 
+  div.margin 
+    div.footer__elem#bold  Подписка
+    div.footer__elem  Получайте специальные уведомления
+    input(placeholder="Email")#border
+div.copy 
+  div Copyright © 2018 Toxin отель. Все права защищены.
+  div
+    img(src="./image/twitter.svg").icon
+    img(src="./image/facebook.svg").icon
+    img(src="./image/instagram.svg").icon#inst
 
       
