--- a/index.pug
+++ b/index.pug
@@ -11,7 +11,9 @@ html(lang="en")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/i18n/jquery-ui-i18n.min.js")
     title Toxin
   body.background
+    div.wrapper
       include ./components/Header.pug
-      include ./components/Rectangle.pug
+      div.main
+        include ./components/Rectangle.pug
       include ./components/Footer.pug
 
