--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,6 +1,6 @@
 .footer
   display: flex
-  flex-direction: column
+  justify-content: space-between
   width: 100%
   // left: 0px
   // top: 900px
@@ -10,9 +10,10 @@
   font-size: 14px
   height: 100%
   +thin
+  // flex: 1 1 auto
+
   &__elem
     margin-bottom: 21px
-    flex: 1 1 auto
 
 #break
   height: 72px
