--- a/sass/_rectangle.sass
+++ b/sass/_rectangle.sass
@@ -1,9 +1,9 @@
 .rectangle
-  position: absolute
+  margin-top: 140px
+  margin-left: 140px
+  margin-bottom: 100px
   width: 380px
   height: 374px
-  left: 140px
-  top: 140px
   background: #FFFFFF
   border: 1px solid rgba(0, 0, 0, 0.12)
   box-sizing: border-box
