--- a/sass/_background.sass
+++ b/sass/_background.sass
@@ -2,3 +2,11 @@
   background: url('../image/img1.png') no-repeat
   background-size: cover
   height: 100%
+
+.wrapper
+  min-height: 100%
+  display: flex
+  flex-direction: column
+
+.main
+  flex: 1 1 auto
