--- a/sass/_background.sass
+++ b/sass/_background.sass
@@ -2,6 +2,8 @@
   background: url('../image/img1.png') no-repeat
   background-size: cover
   height: 100%
+  width: 100%
+  min-height: 1022px
 
 .wrapper
   min-height: 100%
