--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -1,8 +1,8 @@
 .button
   border-radius: 22px
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)
-  border: 2px solid
-  +bold
+  border: 1px solid
+  +semiBold
   text-transform: uppercase
   font-size: 12px
   color: white
@@ -11,8 +11,8 @@
     border-radius: 22px
     background-color: #fff
     color: rgba(188, 156, 255, 1)
-    margin: 3px
-    padding: 7px 12px
+    margin: 2px
+    padding: 7px 20px
 
   &--fill
     // color: white
