--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -2,15 +2,12 @@
   display: flex
   justify-content: space-between
   width: 100%
-  // left: 0px
-  // top: 900px
+  padding: 101px 140px
   background: #FFFFFF
   box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1)
-  padding-top: 104px
   font-size: 14px
   height: 100%
   +thin
-  // flex: 1 1 auto
 
   &__elem
     margin-bottom: 21px
@@ -24,16 +21,18 @@
 #bold
   +semiBold
 .copy
+  border-top: 1px solid rgba(31, 32, 65, 0.5)
+  padding: 26px 140px
   +thin
-  position: absolute
-  width: 1300px
-  height: 56px
-  left: -1px
-  top: 1273px
-  margin-top: 26px
-  margin-bottom: 26px
+  // position: absolute
+  // width: 1300px
+  // height: 56px
+  // left: -1px
+  // top: 1273px
+  // margin-top: 26px
+  // margin-bottom: 26px
   color: rgba(31, 32, 65, 0.75)
-  margin-left: 140px
+  // margin-left: 140px
   background: #FFFFFF
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05)
   display: flex
