--- a/sass/_background.sass
+++ b/sass/_background.sass
@@ -1,6 +1,6 @@
 .background
   background: url('../image/img1.png') no-repeat
-  background-size: cover
+  background-size: contain
   height: 100%
   width: 100%
   min-height: 1022px
@@ -12,3 +12,4 @@
 
 .main
   flex: 1 1 auto
+  min-height: 850px
