--- a/sass/_rectangle.sass
+++ b/sass/_rectangle.sass
@@ -1,7 +1,7 @@
 .rectangle
-  margin-top: 140px
+  margin-top: 70px
   margin-left: 140px
-  margin-bottom: 100px
+  // margin-bottom: 389px
   width: 380px
   height: 374px
   background: #FFFFFF
@@ -11,23 +11,26 @@
   border-radius: 4px
   +semiBold
 
-.name
-  padding-top: 40px
-  padding-left: 30px
-  padding-right: 30px
+  &__name
+    padding-top: 40px
+    padding-left: 30px
+    padding-right: 30px
 
-.dates-wrapper
-  display: flex
-  justify-content: space-between
-  margin-top: 21px
-  margin-left: 30px
-  margin-right: 97px
-  text-transform: uppercase
+  &__dates-wrapper
+    display: flex
+    justify-content: space-between
+    margin-top: 21px
+    margin-left: 30px
+    margin-right: 97px
+    text-transform: uppercase
+    font-size: 12px
 
+  &__check
 .guests
   margin-left: 30px
   margin-top: 21px
   text-transform: uppercase
+  font-size: 12px
 
 #rec
   height: 44px
