--- a/sass/_rectangle.sass
+++ b/sass/_rectangle.sass
@@ -26,11 +26,19 @@
     font-size: 12px
 
   &__check
-.guests
-  margin-left: 30px
-  margin-top: 21px
-  text-transform: uppercase
-  font-size: 12px
+    .check
+      padding-bottom: 6px
+  &__check-out
+    .check-out
+      padding-bottom: 6px
+
+  &__guests
+    margin-left: 30px
+    margin-top: 21px
+    text-transform: uppercase
+    font-size: 12px
+    .guests
+      padding-bottom: 5px
 
 #rec
   height: 44px
