--- a/index.pug
+++ b/index.pug
@@ -9,6 +9,7 @@ html(lang="en")
     script(src="https://code.jquery.com/jquery-1.12.4.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/i18n/jquery-ui-i18n.min.js")
+    script(src="./js/dropdown.js")
     title Toxin
   body.background
     div.wrapper
