--- a/components/Rectangle.pug
+++ b/components/Rectangle.pug
@@ -12,6 +12,29 @@
     .guests Гости
     input(placeholder="Сколько гостей" name='myname').setting#width
     button.button#rec Подобрать номер
-  
+  <div class="iqdropdown">
+  <p class="iqdropdown-selection"></p>
+  <div class="iqdropdown-menu">
+    <div class="iqdropdown-menu-option" data-id="item1">
+      <div>
+        <p class="iqdropdown-item">Item 1</p>
+        <p class="iqdropdown-description">A short description</p>
+      </div>
+    </div>
+    <div class="iqdropdown-menu-option" data-id="item2">
+      <div>
+        <p class="iqdropdown-item">Item 2</p>
+        <p class="iqdropdown-description">A short description</p>
+      </div>
+    </div>
+    <div class="iqdropdown-menu-option" data-id="item3">
+      <div>
+        <p class="iqdropdown-item">Item 3</p>
+        <p class="iqdropdown-description">A short description</p>
+      </div>
+    </div>
+  </div>
+</div>
+
   script 
     include ../js/script.js
