--- a/index.pug
+++ b/index.pug
@@ -6,10 +6,11 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="sass/style.sass")
     link(rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
+    link(rel="stylesheet", href="./sass/item-quantity-dropdown.min.css")
     script(src="https://code.jquery.com/jquery-1.12.4.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/i18n/jquery-ui-i18n.min.js")
-    script(src="./js/dropdown.js")
+    //- script(src="./js/dropdown.js")
     title Toxin
   body.background
     div.wrapper
@@ -17,4 +18,5 @@ html(lang="en")
       div.main
         include ./components/Rectangle.pug
       include ./components/Footer.pug
+    script(src="./js/dropdown.js")
 
