--- a/components/Rectangle.pug
+++ b/components/Rectangle.pug
@@ -16,6 +16,14 @@
         .iqdropdown-menu-option(data-id="item1")
           div
             p.iqdropdown-item Взрослые
+        .iqdropdown-menu-option(data-id="item1")
+          div
+            p.iqdropdown-item Дети
+        .iqdropdown-menu-option(data-id="item1")
+          div
+            p.iqdropdown-item Младенцы
+    
+      
     button.button#rec Подобрать номер
 
   script 
