--- a/index1.pug
+++ b/index1.pug
@@ -12,9 +12,11 @@ html(lang="en")
     script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/i18n/jquery-ui-i18n.min.js")
     //- script(src="./js/dropdown.js")
     title Toxin
-  body
+  body.background
     div.wrapper
       include ./components/Header.pug
       div.main
+        include ./components/Rectangle.pug
       include ./components/Footer.pug
     script(src="./js/dropdown.js")
+
