--- a/index.pug
+++ b/index.pug
@@ -16,5 +16,6 @@ html(lang="en")
     div.wrapper
       include ./components/Header.pug
       div.main
+      include ./components/Card.pug
       include ./components/Footer.pug
     script(src="./js/dropdown.js")
